force-app/main/default/objects/Sample_Transaction__c/Sample_Transaction__c.object-meta.xml
<CustomObject>
    <label>Sample Requests</label>
    <nameField>
        <displayFormat>SR-{00000}</displayFormat>
        <label>Request Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>