force-app/main/default/objects/Sample_Transaction__c/fields/Any_Info_to_Add_to_Sample__c.field-meta.xml
<CustomField>
    <fullName>Any_Info_to_Add_to_Sample__c</fullName>
    <inlineHelpText>Any information to add to this sample before save and close?  Also attach any files in files section.</inlineHelpText>
    <label>Any Info to Add to Sample</label>
    <type>TextArea</type>
</CustomField>