force-app/main/default/objects/Sample_Transaction__c/fields/Approval__c.field-meta.xml
<CustomField>
    <fullName>Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Part of a plant/brand approval request?  Please link to the appropriate Approval record.</inlineHelpText>
    <label>Part of a plant/brand approval request?</label>
    <referenceTo>Approval__c</referenceTo>
    <relationshipLabel>Sample Requests</relationshipLabel>
    <relationshipName>Sample_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>