force-app/main/default/objects/Sample_Transaction__c/fields/Commercial_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commercial Invoice</label>
    <type>Checkbox</type>
</CustomField>