force-app/main/default/objects/Sample_Transaction__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Customer or Prospect Company Name?  Please link the Sample to the appropriate Customer or Prospect company name.</inlineHelpText>
    <label>Customer or Prospect Company Name?</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sample Requests</relationshipLabel>
    <relationshipName>Sample_Transactions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>