force-app/main/default/objects/Sample_Transaction__c/fields/Courier_cost__c.field-meta.xml
<CustomField>
    <fullName>Courier_cost__c</fullName>
    <label>Courier cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>