force-app/main/default/objects/Sample_Transaction__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <length>30</length>
    <type>Text</type>
</CustomField>