force-app/main/default/objects/Sample_Transaction__c/fields/Date_of_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Arrival__c</fullName>
    <label>Date of Arrival</label>
    <type>Date</type>
</CustomField>