force-app/main/default/objects/Sample_Transaction__c/fields/Date_of_Arrival_at_Customer__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Arrival_at_Customer__c</fullName>
    <inlineHelpText>Date of arrival at customer (if shipped indirectly to customer).</inlineHelpText>
    <label>Date of Arrival at Customer</label>
    <type>Date</type>
</CustomField>