force-app/main/default/objects/Sample_Transaction__c/fields/Date_of_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Evaluation__c</fullName>
    <inlineHelpText>Date of evaluation?  A notification will be send to the registor using this date.</inlineHelpText>
    <label>Date of Evaluation</label>
    <type>Date</type>
</CustomField>