force-app/main/default/objects/Sample_Transaction__c/fields/Date_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Request__c</fullName>
    <inlineHelpText>Date that request came in from customer</inlineHelpText>
    <label>Date of Request</label>
    <type>Date</type>
</CustomField>