force-app/main/default/objects/Sample_Transaction__c/fields/Date_requested__c.field-meta.xml
<CustomField>
    <fullName>Date_requested__c</fullName>
    <inlineHelpText>Please enter the date the sample was requested from factory/warehouse etc.</inlineHelpText>
    <label>Sample requested from factory/warehouse</label>
    <type>Date</type>
</CustomField>