force-app/main/default/objects/Sample_Transaction__c/fields/Deadline_of_Sample__c.field-meta.xml
<CustomField>
    <fullName>Deadline_of_Sample__c</fullName>
    <inlineHelpText>Deadline for sample to be received.</inlineHelpText>
    <label>Deadline of Sample</label>
    <type>Date</type>
</CustomField>