force-app/main/default/objects/Sample_Transaction__c/fields/Docs_Needed_for_Sample__c.field-meta.xml
<CustomField>
    <fullName>Docs_Needed_for_Sample__c</fullName>
    <inlineHelpText>Documents Needed for Sample Request?</inlineHelpText>
    <label>Docs Needed for Sample</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certificate of Origin</fullName>
            </value>
            <value>
                <fullName>Commercial Invoice</fullName>
            </value>
            <value>
                <fullName>Health Certificate</fullName>
            </value>
            <value>
                <fullName>Legalization</fullName>
            </value>
            <value>
                <fullName>Packing List</fullName>
            </value>
            <value>
                <fullName>Sanitary Certificate</fullName>
            </value>
            <value>
                <fullName>Veterinary Certificate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>