force-app/main/default/objects/Sample_Transaction__c/fields/Dried_Milk_Applications__c.field-meta.xml
<CustomField>
    <fullName>Dried_Milk_Applications__c</fullName>
    <inlineHelpText>Dried milk products used for following application(s).</inlineHelpText>
    <label>Dried Milk Applications</label>
    <length>255</length>
    <type>Text</type>
</CustomField>