force-app/main/default/objects/Sample_Transaction__c/fields/Expected_Margin_for_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Expected_Margin_for_Prospect__c</fullName>
    <inlineHelpText>Expected margin for prospect (if relevant)?</inlineHelpText>
    <label>Expected Margin for Prospect</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>