force-app/main/default/objects/Sample_Transaction__c/fields/Expected_volume_for_prospect_if_relevan__c.field-meta.xml
<CustomField>
    <fullName>Expected_volume_for_prospect_if_relevan__c</fullName>
    <inlineHelpText>Expected volume for prospect (if relevant)</inlineHelpText>
    <label>Expected Volume of Prospect</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>