force-app/main/default/objects/Sample_Transaction__c/fields/Expiry_date_of_sample__c.field-meta.xml
<CustomField>
    <fullName>Expiry_date_of_sample__c</fullName>
    <label>Expiry Date of Sample</label>
    <type>Date</type>
</CustomField>