force-app/main/default/objects/Sample_Transaction__c/fields/Fat_content_percent__c.field-meta.xml
<CustomField>
    <fullName>Fat_content_percent__c</fullName>
    <inlineHelpText>Fat content (%) in your application(s)?  Maximum value of 100%.</inlineHelpText>
    <label>Fat Content (%)</label>
    <length>6</length>
    <type>Text</type>
</CustomField>