force-app/main/default/objects/Sample_Transaction__c/fields/Feedback_from_Customer__c.field-meta.xml
<CustomField>
    <fullName>Feedback_from_Customer__c</fullName>
    <label>Feedback from Customer</label>
    <length>32076</length>
    <type>LongTextArea</type>
</CustomField>