force-app/main/default/objects/Sample_Transaction__c/fields/Feedback_to_Factory__c.field-meta.xml
<CustomField>
    <fullName>Feedback_to_Factory__c</fullName>
    <label>Feedback to Factory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not relevant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>