force-app/main/default/objects/Sample_Transaction__c/fields/Health_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Health_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Health Certificate</label>
    <type>Checkbox</type>
</CustomField>