force-app/main/default/objects/Sample_Transaction__c/fields/Label_Prepared__c.field-meta.xml
<CustomField>
    <fullName>Label_Prepared__c</fullName>
    <inlineHelpText>Label prepared / requested from vendor?  The label is ready to send to the customer, either requested or created by H.W.</inlineHelpText>
    <label>Label Prepared</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Not yet</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>