force-app/main/default/objects/Sample_Transaction__c/fields/Laboratory__c.field-meta.xml
<CustomField>
    <fullName>Laboratory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Laboratory</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Laboratry</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sample Requests (Laboratory)</relationshipLabel>
    <relationshipName>Sample_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>