force-app/main/default/objects/Sample_Transaction__c/fields/Legalization__c.field-meta.xml
<CustomField>
    <fullName>Legalization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legalization</label>
    <type>Checkbox</type>
</CustomField>