force-app/main/default/objects/Sample_Transaction__c/fields/Logistics_Colleague__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Colleague__c</fullName>
    <inlineHelpText>What colleague needs to arrange sample?</inlineHelpText>
    <label>What colleague needs to arrange sample?</label>
    <length>30</length>
    <type>Text</type>
</CustomField>