force-app/main/default/objects/Sample_Transaction__c/fields/Logistics_Collegue__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Collegue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of colleague who needs to arrange sample?</inlineHelpText>
    <label>Logistics Collegue</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sample_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>