force-app/main/default/objects/Sample_Transaction__c/fields/Logistics_Shipper__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Shipper__c</fullName>
    <inlineHelpText>You must fill this out when Sample Goes is one of the following... From supplier to Hoogwegt, From supplier to warehouse,  From warehouse to Hoogwegt to customer</inlineHelpText>
    <label>Logistics Shipper</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>Fedex</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>