force-app/main/default/objects/Sample_Transaction__c/fields/Lot__c.field-meta.xml
<CustomField>
    <fullName>Lot__c</fullName>
    <label>Lot #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>