force-app/main/default/objects/Sample_Transaction__c/fields/Lot_Batch__c.field-meta.xml
<CustomField>
    <fullName>Lot_Batch__c</fullName>
    <label>Lot/Batch</label>
    <length>30</length>
    <type>Text</type>
</CustomField>