force-app/main/default/objects/Sample_Transaction__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacturer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sample Requests (Vendor)</relationshipLabel>
    <relationshipName>Sample_Transactions3</relationshipName>
    <type>Lookup</type>
</CustomField>