force-app/main/default/objects/Sample_Transaction__c/fields/Min_Sample_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Min_Sample_Requirements__c</fullName>
    <label>Min Sample Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Halal</fullName>
            </value>
            <value>
                <fullName>Kosher</fullName>
            </value>
            <value>
                <fullName>Organic</fullName>
            </value>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>