force-app/main/default/objects/Sample_Transaction__c/fields/Minimum_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Requirements__c</fullName>
    <inlineHelpText>Minimum requirements for sample request?</inlineHelpText>
    <label>Minimum Requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Halal</fullName>
            </value>
            <value>
                <fullName>Kosher</fullName>
            </value>
            <value>
                <fullName>Organic</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>25kg</fullName>
                <isActive>false</isActive>
                <label>25kg</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>