force-app/main/default/objects/Sample_Transaction__c/fields/More_explanation_on_dried_milk_exposure__c.field-meta.xml
<CustomField>
    <fullName>More_explanation_on_dried_milk_exposure__c</fullName>
    <inlineHelpText>More explanation on exposure of dried milk product(?) (? e.g. what is the first process step of the dried milk product, which raw material is used/what temperature and pH is the product exposed to, other properties important)</inlineHelpText>
    <label>More Explanation On Dried Milk Exposure</label>
    <type>TextArea</type>
</CustomField>