force-app/main/default/objects/Sample_Transaction__c/fields/Not_Approved_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_Approved_Reason__c</fullName>
    <inlineHelpText>Please provide the customer&apos;s reason for rejecting the product.  Only answer if they did not approve.</inlineHelpText>
    <label>Not Approved Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>