force-app/main/default/objects/Sample_Transaction__c/fields/Opco__c.field-meta.xml
<CustomField>
    <fullName>Opco__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opco</label>
    <referenceTo>Opco__c</referenceTo>
    <relationshipLabel>Sample Requests</relationshipLabel>
    <relationshipName>Sample_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>