force-app/main/default/objects/Sample_Transaction__c/fields/Opco_Note__c.field-meta.xml
<CustomField>
    <fullName>Opco_Note__c</fullName>
    <formula>&apos;If OPCO=Havero and Product = HAPRO: Check of sample request by Techno&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Note</label>
    <type>Text</type>
</CustomField>