force-app/main/default/objects/Sample_Transaction__c/fields/Opportunity_volume__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_volume__c</fullName>
    <label>Opportunity volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>