force-app/main/default/objects/Sample_Transaction__c/fields/Other_Ingredients__c.field-meta.xml
<CustomField>
    <fullName>Other_Ingredients__c</fullName>
    <inlineHelpText>Which other ingredients are used?</inlineHelpText>
    <label>Other Ingredients?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>