force-app/main/default/objects/Sample_Transaction__c/fields/Other_Logistics_Shipper__c.field-meta.xml
<CustomField>
    <fullName>Other_Logistics_Shipper__c</fullName>
    <inlineHelpText>Please name Other Logistics Shipper in this field if &quot;Other&quot; was chosen under Logistics Shipper field.</inlineHelpText>
    <label>Other Logistics Shipper</label>
    <length>255</length>
    <type>Text</type>
</CustomField>