force-app/main/default/objects/Sample_Transaction__c/fields/Other_Minimum_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Other_Minimum_Requirements__c</fullName>
    <inlineHelpText>Please name any other Minimum Requirements if you included &quot;Other&quot; in the previous Minimum Requirements Multi select list.</inlineHelpText>
    <label>Other Minimum Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>