force-app/main/default/objects/Sample_Transaction__c/fields/Other_Sample_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Sample_Type__c</fullName>
    <inlineHelpText>Please provide describe you selected &quot;Other&quot; in the Sample Request Type field.</inlineHelpText>
    <label>Other Sample Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>