force-app/main/default/objects/Sample_Transaction__c/fields/Packing_List__c.field-meta.xml
<CustomField>
    <fullName>Packing_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Packing List</label>
    <type>Checkbox</type>
</CustomField>