force-app/main/default/objects/Sample_Transaction__c/fields/Part_of_Other_Requests__c.field-meta.xml
<CustomField>
    <fullName>Part_of_Other_Requests__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this is part of another sample requests please link that other sample request here.</inlineHelpText>
    <label>Part of Other Requests</label>
    <referenceTo>Sample_Transaction__c</referenceTo>
    <relationshipLabel>Sample Requests</relationshipLabel>
    <relationshipName>Sample_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>