force-app/main/default/objects/Sample_Transaction__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <formula>TEXT(Opportunity__r.Product_Group__c)
&amp;&quot; - &quot;&amp;
TEXT(Opportunity__r.Item_Description__c)
&amp;
Opportunity__r.Item_Description_Other__c</formula>
    <label>Product</label>
    <type>Text</type>
</CustomField>